--- a/game/styles/stylesheet.css
+++ b/game/styles/stylesheet.css
@@ -28,7 +28,7 @@ img {
     margin-right: auto;
 }
 img.side {float:right; margin: 0 12px;}
-a:link{color:#C75146;}
+a:link{color:pur;}
 a:visited{color:#4b1410;}
 a:focus,a:hover{color:#C75146;}
 a:active{color:#4b1410;}
