--- a/tetris-grid-start-files/css/gridstyles.css
+++ b/tetris-grid-start-files/css/gridstyles.css
@@ -65,10 +65,12 @@ ul.menu li:hover ul {
     padding: 10px;
     color: white;
     text-decoration: none;
+    transition: transform 0.1s ease-in, background-color 0.5s linear;
 }
 .menu a:hover {
 	background: red;
 	color: yellow;
+    transform:scale(1.1);
 }
 .menu li {
     width: 25%;
@@ -105,5 +107,33 @@ div.tet {overflow: visbile;}
 #z img {
     transform-origin: 0 0;
     transform: translateX(205px) rotate(90deg);
+}
+#j{
+    transform-origin: 0 0;
+    transform: translateY(5px) translateX(5px) rotate(180deg);
+    grid-column: 6/span 3;
+    grid-row:6/span 3;
+}
+#l{ grid-column: 1/span 2;
+    grid-row:6/span 6;
+    transform-origin: 0 0;
+    transform: translateY(5px) rotate(270deg);
+}
+#s{
+    grid-column: 4/span 6;
+    grid-row:2/span 6;
+}
+#t{
+    grid-column: 5/span 6;
+    grid-row:3/span 6;
+    transform-origin: 0 0;
+    transform: translateX(205px) rotate(90deg);
+}
+img {
+    transition-property: transform;
+    transition-duration: 2s;
+}
+img:hover {
+    transform: rotate(-90deg);
 }
 footer { grid-area: footer; }
