--- a/DesignToSpecAssets/Styles/stylesheet.css
+++ b/DesignToSpecAssets/Styles/stylesheet.css
@@ -43,7 +43,7 @@ body
     "footer";
     grid-template-rows: 60px 1fr 1fr 1fr 10%;
     grid-template-columns: 100%;
-    row-gap: 3%;
+    row-gap: 2%;
     margin:0;
     background-color: #35363D;
 }
@@ -83,11 +83,18 @@ img{max-width: 100%;}
 {
     grid-area: right;
     background-image: linear-gradient(to bottom right, #E8FdF590, #244D3EE0);
-    border: 10px solid #FFFFFF ;
-    width: fit-content;
+    border: .5em solid #FFFFFF ;
+    width: 33vw;
     height: fit-content
 }
-.left{grid-area:left; padding-top: 2%}
+.left
+{
+    width: 33vw;
+    height: 36.7vw;
+    grid-area:left; 
+    padding-top: 2%;
+    overflow-y: auto;
+}
 /*valley pic*/
 #spread{grid-area: valley;}
 /*Blocks*/
@@ -100,7 +107,7 @@ img{max-width: 100%;}
     "chest   stairs"; 
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-    gap: 10px 20px;
+    gap: 20px 20px;
     align-items: center;
     
 }
@@ -109,9 +116,9 @@ img{max-width: 100%;}
 {
     display: grid;
     grid-template-areas: "image   desc";
-    grid-template-columns: auto auto;
+    grid-template-columns: 50%;
     grid-template-rows: 100%;
-    column-gap: 20px;
+    column-gap: .5%;
     align-items: center;
     
 }
@@ -119,14 +126,24 @@ img{max-width: 100%;}
 .stick{grid-area: sticks;}
 .chest{grid-area: chest;}
 .stairs{grid-area: stairs;}
-#descriptor{grid-area: desc;}
+#descriptor
+{
+    display: flex;
+    box-sizing: border-box;
+    grid-area: desc;
+    height: 19vw;
+    padding: 2% 5%;
+    overflow-y: auto;
+}
 .craf
 {
+    width: 16.8vw;
+    height: 16.8vw;
     text-align: center;
     grid-area: image;
-    border: 10px solid #FFFFFF ;
+    border: .5em solid #FFFFFF ;
     background-color: #324E44;
-    
+    padding-top: 6%;
 }
 
 /*Footer set up*/
@@ -140,10 +157,14 @@ footer{
     display: grid;
     grid-template-areas: "trees   copyright";
     column-gap: 30%;
-    border-top: 10px solid #FFFFFF ;
+    border-top: .5em solid #FFFFFF ;
     line-height: 2.3em;
-    
-    
 }
-.copyright{text-align: right; grid-area: copyright;}
+.copyright
+{
+    text-align: right; 
+    grid-area: copyright; 
+    margin-top: auto; 
+    margin-bottom: auto;
+}
 .treescool{grid-area: trees;}
