--- a/DesignToSpecAssets/Styles/stylesheet.css
+++ b/DesignToSpecAssets/Styles/stylesheet.css
@@ -15,6 +15,7 @@
     font-style: normal;
 
 }
+
 /*Headings*/
 h1,h2,h3,h4
 {
@@ -48,10 +49,9 @@ body
     background-color: #35363D;
 }
 img{max-width: 100%;}
-
 /*combos commands with header*/
 #header,#oak,#crafted{padding: 10px 10vw;}
-#header,.left, #descriptor{background-color: #656868;}
+#header,.left, .descriptor{background-color: #656868;}
 /*Header and its items*/
 #header
 {
@@ -67,6 +67,7 @@ img{max-width: 100%;}
     margin-left: auto; 
     text-align: right;
 }
+
 /*Oak and its items*/
 #oak
 {
@@ -78,14 +79,14 @@ img{max-width: 100%;}
     grid-template-rows: min-content;
     column-gap: 20px;
 }
-.left,.right,#descriptor {padding:7%;}
+.left,.right,.descriptor {padding:7%;}
 .right
 {
     grid-area: right;
     background-image: linear-gradient(to bottom right, #E8FdF590, #244D3EE0);
     border: .5em solid #FFFFFF ;
     width: 33vw;
-    height: fit-content
+    height: fit-content;
 }
 .left
 {
@@ -107,7 +108,7 @@ img{max-width: 100%;}
     "chest   stairs"; 
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-    gap: 20px 20px;
+    gap: 20px;
     align-items: center;
     
 }
@@ -126,7 +127,7 @@ img{max-width: 100%;}
 .stick{grid-area: sticks;}
 .chest{grid-area: chest;}
 .stairs{grid-area: stairs;}
-#descriptor
+.descriptor
 {
     display: flex;
     box-sizing: border-box;
@@ -168,3 +169,70 @@ footer{
     margin-bottom: auto;
 }
 .treescool{grid-area: trees;}
+
+/*At smaller screen size:*/
+@media screen and (max-width:820px)
+{
+    body
+    {
+        height: 100%;
+        row-gap: 20px;
+        grid-template-rows: 60px 2fr .5fr 2fr 10%;
+        grid-template-columns: 100%;
+    }
+    #oak
+    {
+        grid-area: tree;
+        display: grid;
+        grid-template-areas:
+        "right"
+        "left";
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 50%;
+        row-gap: 5%;
+    }
+    .right
+    {
+        grid-area: right;
+        background-image: linear-gradient(to bottom right, #E8FdF590, #244D3EE0);
+        border: .5em solid #FFFFFF ;
+        width: 65vw;
+    }
+    .left
+    {
+        width: 66.8vw;
+        height: fit-content;
+        grid-area:left; 
+        padding-top: 2%;
+    }
+    #crafted
+    {
+        grid-area: blocks;
+        display: grid;
+        grid-template-areas: 
+        "planks"
+        "sticks"
+        "chest"
+        "stairs"; 
+        grid-template-columns: 100%;
+        grid-template-rows: auto auto;
+        gap: 20px 20px;
+        align-items: center;
+    }
+    #crafted img{width: 70%;}
+    .descriptor
+    {
+        display: flex;
+        box-sizing: border-box;
+        grid-area: desc;
+        height: fit-content;
+        padding: 2% 5%;
+    }
+    .craf
+    {
+        width: 30vw;
+        height: 30vw;
+        text-align: center;
+        grid-area: image;
+    }
+}
