--- a/project1/css/yourCSSfile.css
+++ b/project1/css/yourCSSfile.css
@@ -36,7 +36,7 @@ body
     "progress"
     "contact";
     grid-template-columns: 100%;
-    grid-template-rows: 10vh 8vh .8fr .4fr 1fr 18rem;
+    grid-template-rows: 90px 6vh .8fr .4fr 1fr 18rem;
 }
 
 header
@@ -54,7 +54,8 @@ header
 header img
 {
     margin-left: 3vw;
-    height: 150%;
+    max-height: 150%;
+    min-height: 8vh;
     border: .3em solid #153243;
 }
 
@@ -82,7 +83,6 @@ header img
     grid-template-rows: 10% 90%; 
     grid-template-columns: auto auto;
     column-gap: 3vw;
-    
 }
 
 .project
@@ -117,6 +117,7 @@ header img
 
 #about img
 {
+    max-height: 100%;
     width: 90%;
     margin: 3vw; 
     grid-area: photo;
@@ -137,7 +138,65 @@ header img
     
 }
 
-@media screen and (max-width:480px)
+@media screen and (max-width:770px)
 {
+    header img
+    {
+        margin-left: 1vw;
+        height: 130%;
+    }
+    body
+    {
+        grid-template-columns: 100%;
+        grid-template-rows: 10vh 6vh 1fr .2fr 1fr 18rem;
+    }
+    .project img, .projectvar img{width: 70%; margin:5px 0;}
+    p{height: 100%;}
+    .project, .projectvar
+    {
+        max-height: 700px;
+        grid-template-rows: 5vh .3fr .7fr; 
+        grid-template-columns: auto;
+        grid-template-areas: 
+        "title"    
+        "photo"   
+        "desc";
+    }
+    #about img{width: 40%; float: left; margin: 10px}
+    #about
+    {
+        display: initial;
+        padding: 3vw;
+    }
+}
 
+@media screen and (min-width:1400px)
+{
+    body
+    {
+        grid-template-columns: 100%;
+        grid-template-rows: 90px 6vh 1fr 40vh 1fr 15rem;
+    }
+    #projectScroll
+    {
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .project img, .projectvar img{width: 70%; margin:5px 0;}
+    .project p, .projectvar p{overflow-y: visible;}
+    p{height: 100%; width: 80%;}
+    .project, .projectvar
+    {
+        max-height: 1600px;
+        width: 80%;
+        grid-template-rows: 5vh .3fr .8fr; 
+        grid-template-columns: auto;
+        grid-template-areas: 
+        "title"    
+        "photo"   
+        "desc";
+    }
+    #about img{width: 40%; float: left; margin: 10px}
+    #projectProg{display: flex;
+        justify-content: space-evenly;}
 }
