--- a/project1/css/yourCSSfile.css
+++ b/project1/css/yourCSSfile.css
@@ -36,15 +36,15 @@ body
     "progress"
     "contact";
     grid-template-columns: 100%;
-    grid-template-rows: 90px 6vh .8fr .4fr 1fr 18rem;
+    grid-template-rows: 100px 6vh .8fr .4fr 1fr 15rem;
 }
 
 header
 {
+    grid-area: header;
     background-color: #284B63;
     color: #F4F9E9;
     padding: 3vw;
-    grid-area: header;
     display: flex;
     flex-flow: row;
     align-items: center;
@@ -55,7 +55,7 @@ header img
 {
     margin-left: 3vw;
     max-height: 150%;
-    min-height: 8vh;
+    min-height: 5vh;
     border: .3em solid #153243;
 }
 
@@ -117,8 +117,8 @@ header img
 
 #about img
 {
-    max-height: 100%;
-    width: 90%;
+    height: auto;
+    width: 80%;
     margin: 3vw; 
     grid-area: photo;
 }
@@ -140,46 +140,51 @@ header img
 
 @media screen and (max-width:770px)
 {
-    h1{font-size: 1.8rem;}
-    h2{font-size: 1.2rem;}
-    h3{font-size: 1rem}
-    h4{font-size: .8rem;}
+    h1{font-size: 1.5rem;}
+    h2{font-size: 1.4rem;}
+    h3{font-size: 1.2rem}
+    h4{font-size: 1rem;}
     header img
     {
         margin-left: 1vw;
-        height: 130%;
+        height: 100%;
     }
     body
     {
-        font-size: .8rem;
+        font-size: 1rem;
         grid-template-columns: 100%;
-        grid-template-rows: 10vh 6vh 1fr .2fr 1fr 18rem;
+        grid-template-rows: 100px 6vh 1fr .2fr 1fr 15rem;
+        
     }
+    #nav{justify-content: space-evenly;}
     #projectProg,#projectScroll
     {
         display: flex;
         flex-flow: column;
         align-content: space-around;
+        max-height: 100%;
     }
     .project img, .projectvar img{height: 100%; margin:5px 0;}
-    p{height: 100%;margin: 2vh 0;}
+    p{height: 100%; margin: 10% 0;}
     .project, .projectvar
     {
         height:100%;
-        grid-template-rows: 5vh 40% auto; 
+        grid-template-rows: 3vh 40% auto; 
         grid-template-columns: auto;
         grid-template-areas: 
         "title"    
         "photo"   
         "desc";
-        row-gap: 2vh;
+        margin: 4% 0;
     }
     #about img{width: 40%; float: left; margin: 10px}
     #about
     {
+        margin-top:10%;
         display: initial;
         padding: 3vw;
     }
+    #external{margin-top: 7%; padding-top: 3%;}
 }
 
 @media screen and (min-width:1400px)
@@ -187,7 +192,7 @@ header img
     body
     {
         grid-template-columns: 100%;
-        grid-template-rows: 90px 6vh 1fr 40vh 1fr 15rem;
+        grid-template-rows: 100px 6vh 1fr 40vh 1fr 15rem;
     }
     #projectScroll
     {
@@ -208,8 +213,21 @@ header img
         "photo"   
         "desc";
     }
-    #about img{width: 40%; float: left; margin: 10px}
+    #about
+    {
+        grid-template-rows: 10% 90%; 
+        grid-template-columns: 25% 72%;
+        grid-column-gap:3vh ;
+    }
+    #about img
+    {
+        height: 80%;
+        width: auto;
+        margin: auto 5%;
+        grid-area: photo;
+    }
     #projectProg
     {display: flex;
-        justify-content: space-evenly;}
+        justify-content: space-evenly;
+    }
 }
