--- a/project2/css/mainstyle.css
+++ b/project2/css/mainstyle.css
@@ -1,53 +1,152 @@
-html{height: 100%;}
+html
+{
+    height: 100%;
+    font-family: Merriweather;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.7em/26px;
+}
 body
 {
-    display: grid;
     height: 100%;
-    grid-template-areas:
-    "header  header  header"
-    "cal     pod     desc"
-    "cal     sun     desc"
-    "footer  footer  footer";
-    grid-template-rows: 80px auto auto auto;
-    grid-template-columns: auto 60% auto;
-    column-gap: 1%;
-    
+    display: grid;
+    grid-template-rows: 80px auto auto;
+    grid-template-areas: 
+    "header"
+    "content"
+    "footer";
+    background-blend-mode:luminosity;
+    row-gap: 1%;
     background-color: #03122b;
-    color: #FFFFFF;
+    color: #E6E8E6;
     margin: 0;
+}
+#container{
+    justify-self: center;
+    align-self: center;
+    width: 98%;
+    max-height: 100%;
+    grid-area: content;
+    display: grid;
+    grid-template-areas:
+    "cal     pod     desc"
+    "cal     sun     desc";
+    grid-template-rows: auto auto;
+    grid-template-columns: auto 50% auto;
+    column-gap: 1%;
+    row-gap: 1%;
+    margin: 10px;
 }
 header
 {
-    background-color: #03122b;
     grid-area: header;
+    background-color: #03122b;
+    
 }
-footer{grid-area: footer; background-color: #03122b;;}
-#calendar{grid-area: cal;}
-#location{grid-area: sun;}
-#description
+footer
 {
-    grid-area: desc; 
-    background-color: #03122b; 
-    height: fit-content;
-    align-self: center;
-    justify-self: center;
+    grid-area:footer;
+    background-color: #03122b;
+    padding: 10px;
+    font-family: Merriweather;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.7em/26px;
 }
-h2{margin: 5px;}
+button
+{
+    border: none;
+    border-radius: 7%;
+    margin: 5px 5px 5px 0;
+    width: 15vw; 
+    height: 5vh;
+    background-color: #020B1C;
+    color: #E6E8E6;
+    font-family: Helvetica;
+    font-size: 1rem;
+    transition-duration: 0.5s;
+}
+button:hover{
+    background-color:#041c44 ;
+    box-shadow: 0 0 40px #e6a93769;
+}
+h1
+{
+    margin: 20px 0 20px 10px;
+    font-family: Helvetica;
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 1.2em/53px;
+    letter-spacing: -.021em;
+}
+h2
+{
+    margin: 5px;
+    font-family: Helvetica;
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 1.2em/53px;
+    letter-spacing: -.021em;
+}
 p{margin: 5px;}
-#pod
-{
-    display: grid;
-    grid-area: pod; 
-    margin: auto;
-    grid-template-areas:
-    "prev   next"
-    "pic    pic";
-}
-#pod img {grid-area: pic;}
-#next{grid-area: next;}
-#prev{grid-area: prev}
+
 img
 {
     opacity: 1;
     max-width: 100%;
 }
+input{
+    font-family: Source Sans Pro;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.7em/26px;
+}
+#calendar
+{
+    grid-area: cal;
+    background-color:#03122b;
+    padding: 10px;
+    height: fit-content;
+    box-shadow: -5px 5px 20px #020B1C ;
+}
+#location
+{
+    grid-area: sun;
+    background-color: #e6a937ad;
+    box-shadow: 0 5px 40px #e6a93788;
+    padding: 10px;
+    height: fit-content;
+    font-family: Source Sans Pro;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 1.5em/33px;
+}
+#description
+{
+    grid-area: desc; 
+    background-color:#03122b; 
+    height: fit-content;
+    align-self: flex-start;
+    justify-self: center;
+    box-shadow: 5px 5px 20px #020B1C ;
+    padding: 10px;
+    font-family: Source Sans Pro;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 1.5em/33px;
+}
+
+#pod
+{
+    display: grid;
+    grid-area: pod;
+    grid-template-areas:
+    "prev   next"
+    "pic    pic";
+    justify-items: center;
+    align-items: center;
+}
+#pod img {grid-area: pic;}
+iframe{min-width: 100%; min-height: 100%; grid-area: pic;}
+#next{grid-area: next;}
+#prev{grid-area: prev}
