Adding instruction page

--- a/project3/css/mainstyle.css
+++ b/project3/css/mainstyle.css
@@ -1,2 +1,5 @@
 img{width: 40%;}
-body{cursor: url(../media/paintbrush.png) 0 16, crosshair;}
+body{
+    font-family: 'Amatic SC', cursive;
+    cursor: url(../media/paintbrush.png) 0 16, crosshair;
+}
