project work, words work, icons don't yet

--- a/project3/css/mainstyle.css
+++ b/project3/css/mainstyle.css
@@ -3,3 +3,4 @@ body{
     font-family: 'Amatic SC', cursive;
     cursor: url(../media/paintbrush.png) 0 16, crosshair;
 }
+p{font-size: 80px; margin: 0;}
